update gradle plugin

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -46,6 +46,10 @@ android {
     defaultConfig {
         minSdkVersion 21
     }
+
+    configurations {
+        all*.exclude group: 'xmlpull', module: 'xmlpull'
+    }
 }
 
 dependencies {
